# python-knowledge-base

./: README.md
04-poo/: 02-herencia-y-polimorfismo.md
04-poo/codigo/herencia-y-polimorfismo/: example.py  example2.py  example3.py  example4.py  example5.py
06-input-output/: 02-manejo-de-ficheros.md
06-input-output/codigo/: archivos.py
06-input-output/codigo/output/: engagement_report.json  example2.txt  findings.txt  report_exclusive.txt  scan_results.csv
07-biblioteca-estandar/: 01-manejo-de-fechas.md
07-biblioteca-estandar/codigo/: fechas.py
08-librerias-estandar/: 01-sistema.md  02-requests.md  03-urllib3.md
08-librerias-estandar/codigo/: requests_library.py  urllib3_library.py
08-librerias-estandar/codigo/extractor-cabeceres/: main.py
09-python-ofensivo/02-mac-changer/mac-changer/: pyproject.toml
09-python-ofensivo/02-mac-changer/mac-changer/src/mac_changer/core/: __init__.py  mac_changer.py
09-python-ofensivo/02-mac-changer/mac-changer/src/mac_changer/interface/: cli.py
09-python-ofensivo/02-mac-changer/mac-changer/src/mac_changer/utils/: __init__.py  validators.py
09-python-ofensivo/02-mac-changer/mac-changer/tests/: test_mac_changer.py  test_system.py  test_validators.py
09-python-ofensivo/03-escaner-de-red/network-scanner/: README.md  pyproject.toml
09-python-ofensivo/03-escaner-de-red/network-scanner/src/network_scanner/core/: __init__.py  discovery.py
09-python-ofensivo/03-escaner-de-red/network-scanner/src/network_scanner/interface/: cli.py
09-python-ofensivo/03-escaner-de-red/network-scanner/src/network_scanner/utils/: __init__.py  console.py  control.py  validators.py
09-python-ofensivo/03-escaner-de-red/network-scanner/tests/: test_cli.py  test_control.py  test_discovery.py  test_validators.py
09-python-ofensivo/04-envenenador-arp/arp-spoofer/: pyproject.toml
09-python-ofensivo/04-envenenador-arp/arp-spoofer/src/arp_spoofer/core/: __init__.py  scanner_arp.py
09-python-ofensivo/04-envenenador-arp/arp-spoofer/src/arp_spoofer/interface/: cli.py
09-python-ofensivo/04-envenenador-arp/arp-spoofer/tests/: test_cli.py  test_scanner_arp.py
(+2 files in other folders)
