[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mac-changer"
version = "0.0.1"
description = "CLI para modificar la MAC del equipo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [{name = "NiettoVale"}]

keywords = [
    "python",
    "api",
    "automation",
    "mac changer",
    "cli"
]

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mac-changer = "mac_changer.interface.cli:app"

