[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-scanner"
version = "0.0.1"
description = "Escaner de red simple en Python que descubre hosts activos mediante ping sweep, soportando IP unica, rangos y subredes CIDR."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [{name = "NiettoVale"}]

keywords = [
    "python",
    "automation"
]

dependencies = [
    "typer>=0.16",
    "rich>=14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
network-scanner = "network_scanner.interface.cli:app"
