[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arp-spoofer"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [{name = "NiettoVale"}]

keywords = [
    "python",
    "automation"
]

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
    "scapy>=2.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
arp-spoofer = "arp_spoofer.interface.cli:app"
